# AnuragOS

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  logger.py  main.py
backend/app/agents/: workspace_agent.py
backend/app/cli/: workspace.py
backend/app/core/: orchestrator.py  registry.py
backend/app/tools/: mac_tools.py
docs/: changelog.md
docs/journal/: 2026-07-01.md  2026-07-02.md  2026-07-04.md
