[project]
name = "anuragos"
version = "0.1.0"
description = "AI Operating System powered by Claude, MCP and AI Agents."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
anuragos = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]